--- a/index.html
+++ b/index.html
@@ -558,7 +558,7 @@
             if (!message) return;
 
             // 获取API Key和模型名称
-            const apiKey = localStorage.getItem('aliApiKey')|| 'sk-affb2f48526b4aa38cadfd3004646fcc';
+            const apiKey = localStorage.getItem('aliApiKey');
             const modelName = localStorage.getItem('aliModelName') || 'deepseek-r1';
 
             if (!apiKey) {
